--- a/index.html
+++ b/index.html
@@ -293,14 +293,324 @@
       </div>
     </div>
 
-    <!-- Worked -->
+    <!-- Featured -->
     <div class="section-x">
       <div class="container">
-        <div class="row">
-          <div class="col-md-10">
-            <h3 class="section-heading"><span class="text-color">0.3</span> Featured Projects</h3>
-            <div class="mt-5 ml-5">
+        <h3 class="section-heading"><span class="text-color">0.3</span> Featured Projects</h3>
 
+        <div class="projee">
+          <div class="row">
+            <div class="col-md-7 order-2 order-md-1">
+              <div class="project-x">
+                <p class="mb-0 mt-0 text-color">Featured Project</p>
+                <a href="#" target="_blank" class="h3">Bookings Africa</a>
+                <div class="card card-x">
+                  <div class="card-body">
+                    <p class="m-0">A web app for the Largest Online Freelance Marketplace, To Simply Source, Compare
+                      And Book
+                      The Creatives Needed For The Media And Entertainment Industry Across Africa.
+                      Bookings Africa Uniquely Leverages Technology To Economically Empower Millions Of People
+                      Around Africa To Unlock And Monetize Their Creative Passions And Talents To Become Freelance
+                      Entrepreneurs</p>
+                  </div>
+                </div>
+                <div class="stack">
+                  <span>HTML</span>
+                  <span>CSS</span>
+                  <span>JS</span>
+                  <span>Bootstrap</span>
+                  <span>Animate.css</span><br>
+                  <span>Vegas.js</span>
+                  <span>JQuery</span>
+                </div>
+                <a href="#" target="_blank">
+                  <img class="link-ref" src="./assets/img/icons/external-link.svg" />
+                </a>
+              </div>
+            </div>
+            <div class="col-md-5">
+              <a class="projimg" href="#" target="_blank">
+                <div style="background:linear-gradient(#d0b40100, #000000), url(./assets//img/bookings.png);"></div>
+              </a>
+            </div>
+          </div>
+        </div>
+
+
+        <div class="projee">
+          <div class="row">
+            <div class="col-md-7">
+              <div class="project-x">
+                <p class="mb-0 mt-0 text-color">Featured Project</p>
+                <a href="#" target="_blank" class="h3">Casting</a>
+                <div class="card card-x">
+                  <div class="card-body">
+                    <p class="m-0">Cast.i.ng, a community of actors, casting directors and agents.We are a creative
+                      talent management and casting agency serving the needs of producers, casting directors and actors
+                      in the Nigerian film and TV industry</p>
+                  </div>
+                </div>
+                <div class="stack">
+                  <span>HTML</span>
+                  <span>CSS</span>
+                  <span>JS</span>
+                  <span>Bootstrap</span>
+                  <span>Animate.css</span><br>
+                  <span>Vegas.js</span>
+                  <span>JQuery</span>
+                </div>
+                <a href="#" target="_blank">
+                  <img class="link-ref" src="./assets/img/icons/external-link.svg" />
+                </a>
+              </div>
+            </div>
+            <div class="col-md-5">
+              <a class="projimg" href="#" target="_blank">
+                <div style="background:linear-gradient(#d0b40100, #000000), url(./assets//img/casting.png);"></div>
+              </a>
+            </div>
+          </div>
+        </div>
+
+        <div class="projee">
+          <div class="row">
+            <div class="col-md-7 order-2 order-md-1">
+              <div class="project-x">
+                <p class="mb-0 mt-0 text-color">Featured Project</p>
+                <a href="#" target="_blank" class="h3">Patricia</a>
+                <div class="card card-x">
+                  <div class="card-body">
+                    <p class="m-0">Patricia Technologies is an e-commerce company that deals with trading giftcards and
+                      discounted cards used for millions of in-app purchases in the tech space and mobile apps/devices.
+                      It also has a Patricia Gift Store which help users send gifts to over 25 countries, and odd
+                      helper, an i n-app purchase platform that help user pay discount prices for application,
+                      subscriptions, purchases and downloads</p>
+                  </div>
+                </div>
+                <div class="stack">
+                  <span>HTML</span>
+                  <span>CSS</span>
+                  <span>JS</span>
+                  <span>Bootstrap</span>
+                  <span>Slick</span>
+                  <span>JQuery</span>
+                </div>
+                <a href="#" target="_blank">
+                  <img class="link-ref" src="./assets/img/icons/external-link.svg" />
+                </a>
+              </div>
+            </div>
+            <div class="col-md-5">
+              <div class="projimg">
+                <div style="background:linear-gradient(#d0b40100, #000000), url(./assets//img/patricia.png);"></div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+      </div>
+    </div>
+
+    <!-- Other Project -->
+    <div class="section-x pt-5">
+      <div class="container">
+        <!-- Other Project -->
+        <h3 class="text-white font-weight-bold text-center mb-5">Other Projects</h3>
+        <div class="row">
+          <div class="col-md-4">
+            <div class="card card-x card-other">
+              <div class="card-body">
+                <div class="row my-4">
+                  <div class="col-6">
+                    <img src="./assets/img/icons/folder.svg" height="35" />
+                  </div>
+                  <div class="col-6 text-right">
+                    <a href="#" target="_blank">
+                      <img src="./assets/img/icons/external-link.svg" height="20" />
+                    </a>
+                  </div>
+                </div>
+                <a href="#" target="_blank" class="h4 otherproj">Leadercity Park</a>
+                <p class="mb-5 mt-3">A Simple website that allows registration and viewing of past events pictures of
+                  the
+                  Girlcode Academy</p>
+                <div class="stack mt-5">
+                  <span>HTML</span>
+                  <span>CSS</span>
+                  <span>JS</span>
+                  <span>Bootstrap</span>
+                  <span>Slick</span>
+                  <span>JQuery</span>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="card card-x card-other">
+              <div class="card-body">
+                <div class="row my-4">
+                  <div class="col-6">
+                    <img src="./assets/img/icons/folder.svg" height="35" />
+                  </div>
+                  <div class="col-6 text-right">
+                    <a href="#" target="_blank">
+                      <img src="./assets/img/icons/external-link.svg" height="20" />
+                    </a>
+                  </div>
+                </div>
+                <a href="#" target="_blank" class="h4 otherproj">Accessmezone</a>
+                <p class="mb-5 mt-3">A Learning Management System for SMEs powered by Accessbank.</p>
+                <div class="stack mt-5">
+                  <span>HTML</span>
+                  <span>CSS</span>
+                  <span>JS</span>
+                  <span>Bootstrap</span>
+                  <span>Datatable</span>
+                  <span>Select2</span>
+                  <span>JQuery</span>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-4">
+            <div class="card card-x card-other">
+              <div class="card-body">
+                <div class="row my-4">
+                  <div class="col-6">
+                    <img src="./assets/img/icons/folder.svg" height="35" />
+                  </div>
+                  <div class="col-6 text-right">
+                    <a href="#" target="_blank">
+                      <img src="./assets/img/icons/external-link.svg" height="20" />
+                    </a>
+                  </div>
+                </div>
+                <a href="#" target="_blank" class="h4 otherproj">Girlcode Academy</a>
+                <p class="mb-5 mt-3">A Simple website that allows registration and viewing of past events pictures of
+                  the Girlcode Academy</p>
+                <div class="stack mt-5">
+                  <span>HTML</span>
+                  <span>CSS</span>
+                  <span>JS</span>
+                  <span>Bootstrap</span>
+                  <span>JQuery</span>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-4">
+            <div class="card card-x card-other">
+              <div class="card-body">
+                <div class="row my-4">
+                  <div class="col-6">
+                    <img src="./assets/img/icons/folder.svg" height="35" />
+                  </div>
+                  <div class="col-6 text-right">
+                    <a href="#" target="_blank">
+                      <img src="./assets/img/icons/external-link.svg" height="20" />
+                    </a>
+                  </div>
+                </div>
+                <a href="#" target="_blank" class="h4 otherproj">Ejoya</a>
+                <p class="mb-5 mt-3">A Web Application for Music Creatives. It allows you to upload & distribute your
+                  music globally & make earnings.</p>
+                <div class="stack mt-5">
+                  <span>HTML</span>
+                  <span>CSS</span>
+                  <span>JS</span>
+                  <span>Bootstrap</span>
+                  <span>JQuery</span>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-4">
+            <div class="card card-x card-other">
+              <div class="card-body">
+                <div class="row my-4">
+                  <div class="col-6">
+                    <img src="./assets/img/icons/folder.svg" height="35" />
+                  </div>
+                  <div class="col-6 text-right">
+                    <a href="#" target="_blank">
+                      <img src="./assets/img/icons/external-link.svg" height="20" />
+                    </a>
+                  </div>
+                </div>
+                <a href="#" target="_blank" class="h4 otherproj">Sp4otos</a>
+                <p class="mb-5 mt-3">A Portfolio Web site for a photographer built using bootstrap, and fetched images
+                  from Instagram API. </p>
+                <div class="stack mt-5">
+                  <span>HTML</span>
+                  <span>CSS</span>
+                  <span>JS</span>
+                  <span>Bootstrap</span>
+                  <span>Firebase</span>
+                  <span>Instagram</span>
+                  <span>JQuery</span>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-4">
+            <div class="card card-x card-other">
+              <div class="card-body">
+                <div class="row my-4">
+                  <div class="col-6">
+                    <img src="./assets/img/icons/folder.svg" height="35" />
+                  </div>
+                  <div class="col-6 text-right">
+                    <a href="#" target="_blank">
+                      <img src="./assets/img/icons/external-link.svg" height="20" />
+                    </a>
+                  </div>
+                </div>
+                <a href="#" target="_blank" class="h4 otherproj">The Nest</a>
+                <p class="mb-5 mt-3">The Nest Innovation Technology Park is a community that fosters innovation for
+                  technology startups, helping them to thrive by encouraging experimentation, research, and adoption of
+                  new and emerging technologies.</p>
+                <div class="stack mt-5">
+                  <span>HTML</span>
+                  <span>CSS</span>
+                  <span>JS</span>
+                  <span>Bootstrap</span>
+                  <span>Firebase</span>
+                  <span>Instagram</span>
+                  <span>JQuery</span>
+                </div>
+              </div>
+            </div>
+          </div>
+
+        </div>
+
+        <div class="text-center my-5">
+          <a href="#" class="btn btn-primary btn-simple btn-x">More Projects</a>
+        </div>
+      </div>
+    </div>
+
+    <!-- Contact Project -->
+    <div class="section-x pt-0">
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-md-8 text-center">
+            <p class="mb-0 mt-0 text-color">04. What’s Next</p>
+            <h1 class="text-white font-weight-bold mb-5">Let’s create something
+              together</h1>
+            <p>I am based in Lagos but happy to either work remote or travel to your location. Feel free to contact me
+              for
+              any project request, hackathon, or a chess game. My inbox is always open, I’d try my best to answer your
+              mail!
+            </p>
+
+
+            <div class="text-center my-5">
+              <a href="#" class="btn btn-primary btn-simple btn-x">Say Hello</a>
             </div>
           </div>
         </div>
