Add Service Worker

--- a/index.html
+++ b/index.html
@@ -2,15 +2,65 @@
 <html lang="en">
 
 <head>
-  <meta charset="utf-8" />
-  <link rel="apple-touch-icon" sizes="76x76" href="assets/img/apple-icon.png">
-  <link rel="icon" type="image/png" href="assets/img/favicon.png">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-  <title>
-    Adeniran Opeyemi | Software Engineer
-  </title>
-  <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no'
-    name='viewport' />
+
+  <meta charset="utf-8">
+  <meta http-equiv="x-ua-compatible" content="ie=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+  <title lang="en">Adeniran Opeyemi | Software Engineer</title>
+
+  <meta name="description" content="Adeniran Opeyemi is a software engineer based in Lagos, Nigeria specialising in building (and most times
+                    designing)
+                    exceptional, high-quality websites and applications.">
+  <meta name="keywords"
+    content="Adeniran Opeyemi, Adeniran, Opeyemi, horpey,thauiguy,tha_ui_guy,tha ui guy, software engineer, front-end engineer,web designer, web developer, javascript, lagos, nigerian developer">
+  <meta name="google-site-verification" content="">
+  <meta property="og:title" content="Adeniran Opeyemi | Software Engineer">
+  <meta property="og:description" content="Adeniran Opeyemi is a software engineer based in Lagos, Nigeria specialising in building (and most times
+      designing)
+      exceptional, high-quality websites and applications.">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://horpey.com">
+  <meta property="og:site_name" content="Adeniran Opeyemi | Software Engineer">
+  <meta property="og:image" content="https://brittanychiang.com/static/og-2084cec62dca67200911f5f975a5d673.png">
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="630">
+  <meta property="og:image:type" content="image/png">
+  <meta property="og:locale" content="en_US">
+  <meta itemprop="name" content="Adeniran Opeyemi | Software Engineer">
+  <meta itemprop="description"
+    content="Adeniran Opeyemi is a software engineer based in Boston, MA who specializes in developing (and occasionally designing) exceptional, high-quality websites and applications.">
+  <meta itemprop="image" content="https://brittanychiang.com/static/og-2084cec62dca67200911f5f975a5d673.png">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:url" content="https://horpey.com">
+  <meta name="twitter:site" content="@toons_hub">
+  <meta name="twitter:creator" content="@toons_hub">
+  <meta name="twitter:title" content="Adeniran Opeyemi | Software Engineer">
+  <meta name="twitter:description"
+    content="Adeniran Opeyemi is a software engineer based in Boston, MA who specializes in developing (and occasionally designing) exceptional, high-quality websites and applications.">
+  <meta name="twitter:image" content="https://brittanychiang.com/static/og-2084cec62dca67200911f5f975a5d673.png">
+  <meta name="twitter:image:alt" content="Adeniran Opeyemi | Software Engineer">
+  <link rel="sitemap" type="application/xml" href="/sitemap.xml">
+
+  <link rel="apple-touch-icon" sizes="57x57" href="assets/favicon.ico/apple-icon-57x57.png">
+  <link rel="apple-touch-icon" sizes="60x60" href="assets/favicon.ico/apple-icon-60x60.png">
+  <link rel="apple-touch-icon" sizes="72x72" href="assets/favicon.ico/apple-icon-72x72.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="assets/favicon.ico/apple-icon-76x76.png">
+  <link rel="apple-touch-icon" sizes="114x114" href="assets/favicon.ico/apple-icon-114x114.png">
+  <link rel="apple-touch-icon" sizes="120x120" href="assets/favicon.ico/apple-icon-120x120.png">
+  <link rel="apple-touch-icon" sizes="144x144" href="assets/favicon.ico/apple-icon-144x144.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="assets/favicon.ico/apple-icon-152x152.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon.ico/apple-icon-180x180.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="assets/favicon.ico/android-icon-192x192.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon.ico/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="96x96" href="assets/favicon.ico/favicon-96x96.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon.ico/favicon-16x16.png">
+  <link rel="manifest" href="assets/favicon.ico/manifest.json">
+  <meta name="msapplication-TileColor" content="#ffdd00">
+  <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+  <meta name="theme-color" content="#ffdd00">
+
+
   <!--     Fonts and icons     -->
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,200" rel="stylesheet" />
   <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
@@ -25,7 +75,7 @@
 
 </head>
 
-<body class="landing-page sidebar-collapse tutorial">
+<body class="landing-page sidebar-collapse tutorial" id="home">
   <main class="page">
     <div class="page__inner">
       <!-- The cursor elements -->
@@ -64,7 +114,7 @@
       <nav class="navbar navbar-expand-lg bg-dark fixed-top navbar-transparent " color-on-scroll="400">
         <div class="container-fluid">
           <div class="navbar-translate">
-            <a class="navbar-brand d-unset link" href="#">
+            <a class="navbar-brand d-unset link" href="#home" data-scrollto-link>
               <img class="" src="assets/img/a-logo.svg" />
             </a>
             <button class="navbar-toggler navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation"
@@ -78,27 +128,27 @@
             data-nav-image="assets/img/blurred-image-1.jpg">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link link" href="#">
+                <a class="nav-link link" href="#about" data-scrollto-link>
                   <span>01.</span> About
                 </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link link" href="#">
+                <a class="nav-link link" href="#experience" data-scrollto-link>
                   <span>02.</span> Experience
                 </a>
               </li>
               <li class="nav-item link">
-                <a class="nav-link" href="#">
+                <a class="nav-link" href="#work" data-scrollto-link>
                   <span>03.</span> Work
                 </a>
               </li>
               <li class="nav-item link">
-                <a class="nav-link" href="#">
+                <a class="nav-link" href="#contact" data-scrollto-link>
                   <span>04.</span> Contact
                 </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link btn btn-primary btn-simple btn-x mt-1" href="#">
+                <a class="nav-link btn btn-primary btn-simple btn-x mt-1" href="/resume.pdf" target="_blank">
                   Resume
                 </a>
               </li>
@@ -154,7 +204,8 @@
                       designing)
                       exceptional, high-quality websites and applications.</p>
                     <div class="">
-                      <a href="#" class="btn btn-primary btn-simple btn-x">Get in Touch</a>
+                      <a href="mailto:adeniran.opeyemi.ao@gmail.com" class="btn btn-primary btn-simple btn-x">Get in
+                        Touch</a>
                     </div>
                   </div>
                 </div>
@@ -163,7 +214,7 @@
           </div>
           <div class="mouse-indicator">
             <div class="linebefore"></div>
-            <a href="#" class="link">
+            <a href="#about" class="link" data-scrollto-link>
               <img class="" src="./assets/img/icons/mouse.svg" />
             </a>
             <div class="linebefore"></div>
@@ -195,7 +246,7 @@
         </div>
 
         <!-- About Me -->
-        <div class="section-x">
+        <div class="section-x" id="about">
           <div class="container">
             <div class="row">
               <div class="col-md-8">
@@ -279,7 +330,7 @@
 
 
         <!-- Worked -->
-        <div class="section-x">
+        <div class="section-x" id="experience">
           <div class="container">
             <div class="row">
               <div class="col-md-10">
@@ -358,7 +409,7 @@
         </div>
 
         <!-- Featured -->
-        <div class="section-x">
+        <div class="section-x" id="work">
           <div class="container">
             <h3 class="section-heading"><span class="text-color">0.3</span> Featured Projects</h3>
 
@@ -667,7 +718,7 @@
         </div>
 
         <!-- Contact Project -->
-        <div class="section-x pt-0">
+        <div class="section-x pt-0" id="contact">
           <div class="container">
             <div class="row justify-content-center">
               <div class="col-md-8 text-center">
@@ -684,7 +735,7 @@
 
 
                 <div class="text-center my-5">
-                  <a href="#" class="btn btn-primary btn-simple btn-x">Say Hello</a>
+                  <a href="mailto:adeniran.opeyemi.ao@gmail.com" class="btn btn-primary btn-simple btn-x">Say Hello</a>
                 </div>
               </div>
             </div>
@@ -709,6 +760,7 @@
 
   <!--   Core JS Files   -->
   <script src="assets/js/core/jquery.min.js" type="text/javascript"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/jquery-scrollTo/1.4.3/jquery.scrollTo.min.js"></script>
   <script src="assets/js/core/bootstrap.min.js" type="text/javascript"></script>
   <script src="assets/js/now-ui-kit.js?v=1.2.0" type="text/javascript"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.2.0/anime.js"></script>
@@ -719,6 +771,12 @@
   <script src="./assets/js/plugins/magneticmouse/magnetic-mouse.js"></script>
 
   <script>
+    if ('serviceWorker' in navigator) {
+      navigator.serviceWorker
+        .register('/sw.js')
+        .then(function () { console.log("Service Worker Registered"); });
+    }
+
     const svgPathx = document.querySelectorAll('.pathwayx');
     const svgText = anime({
       targets: svgPathx,
@@ -744,6 +802,21 @@
         direction: 'alternate',
         loop: false
       });
+
+      //Animated Scroll
+
+      $("a[href^='#']").on("click", function (e) {
+        $("html, body").animate({
+          scrollTop: $($(this).attr("href")).offset().top
+        }, 1000);
+      });
+
+      if ($(window.location.hash).length > 0) {
+        $("html, body").animate({
+          scrollTop: $(window.location.hash).offset().top
+        }, 1000);
+      }
+
     });
   </script>
 </body>
