--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
   <link rel="manifest" href="assets/favicon.ico/manifest.json">
   <meta name="msapplication-TileColor" content="#ffdd00">
   <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
-  <meta name="theme-color" content="#ffdd00">
+  <meta name="theme-color" content="#000000">
 
 
   <!--     Fonts and icons     -->
