--- a/index.html
+++ b/index.html
@@ -22,23 +22,25 @@
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://horpey.com">
   <meta property="og:site_name" content="Adeniran Opeyemi | Software Engineer">
-  <meta property="og:image" content="./assets/img/preview/png">
+  <meta property="og:image" content="./assets/img/preview.png">
   <meta property="og:image:width" content="1200">
   <meta property="og:image:height" content="630">
   <meta property="og:image:type" content="image/png">
   <meta property="og:locale" content="en_US">
   <meta itemprop="name" content="Adeniran Opeyemi | Software Engineer">
-  <meta itemprop="description"
-    content="Adeniran Opeyemi is a software engineer based in Boston, MA who specializes in developing (and occasionally designing) exceptional, high-quality websites and applications.">
-  <meta itemprop="image" content="./assets/img/preview/png">
+  <meta itemprop="description" content="Adeniran Opeyemi is a software engineer based in Lagos, Nigeria specialising in building (and most times
+      designing)
+      exceptional, high-quality websites and applications.">
+  <meta itemprop="image" content="./assets/img/preview.png">
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:url" content="https://horpey.com">
   <meta name="twitter:site" content="@toons_hub">
   <meta name="twitter:creator" content="@toons_hub">
   <meta name="twitter:title" content="Adeniran Opeyemi | Software Engineer">
-  <meta name="twitter:description"
-    content="Adeniran Opeyemi is a software engineer based in Boston, MA who specializes in developing (and occasionally designing) exceptional, high-quality websites and applications.">
-  <meta name="twitter:image" content="./assets/img/preview/png">
+  <meta name="twitter:description" content="Adeniran Opeyemi is a software engineer based in Lagos, Nigeria specialising in building (and most times
+      designing)
+      exceptional, high-quality websites and applications.">
+  <meta name="twitter:image" content="./assets/img/preview.png">
   <meta name="twitter:image:alt" content="Adeniran Opeyemi | Software Engineer">
   <link rel="sitemap" type="application/xml" href="/sitemap.xml">
 
@@ -67,10 +69,10 @@
   <!-- CSS Files -->
   <link href="assets/css/bootstrap.min.css" rel="stylesheet" />
   <link href="assets/css/now-ui-kit.css?v=1.2.0" rel="stylesheet" />
-  <link href="assets/demo/demo.css" rel="stylesheet" />
+  <!-- <link href="assets/demo/demo.css" rel="stylesheet" /> -->
   <link href="assets/css/custom-old.css" rel="stylesheet" />
   <link href="assets/css/custom.css" rel="stylesheet" />
-  <link href="assets/css/texttransform.css" rel="stylesheet" />
+  <!-- <link href="assets/css/texttransform.css" rel="stylesheet" /> -->
   <link rel="stylesheet" href="assets/css/mediaquery.css">
   <link rel="stylesheet" href="./assets/js/plugins/magneticmouse/magnetic-mouse.css">
 
@@ -223,7 +225,7 @@
       <div class="wrapper">
         <div class="page-header">
           <div class="page-header-image" data-parallax="true"
-            style="background: linear-gradient(90deg,#000000,#ff000000), url(assets/img/homebg.jpg);">
+            style="background: linear-gradient(90deg,#000000,#ff000000), url(assets/img/homebg.png);">
           </div>
           <div class="content-center">
             <div class="container">
@@ -337,7 +339,6 @@
                         <li>HTML</li>
                         <li>CSS/Sass</li>
                         <li>Python</li>
-                        <li>Python</li>
                         <li>Php</li>
                         <li>SQL</li>
                       </ul>
@@ -427,7 +428,7 @@
                               and Jam, Nigeria</span></h5>
                           <p>December 2018 - Till date</p>
                           <ul class="list-x">
-                            <li>Developed and maintained code for in-hpuse and client websites
+                            <li>Developed and maintained code for in-house and client websites
                               primarily using HTML, CSS, Sass, Javascript and JQuery</li>
                             <li>Manually tested sites in various browsers and mobile devices
                               to ensure cross-browser compatibility and responsiveness.</li>
@@ -612,10 +613,12 @@
                       </div>
                     </div>
                     <a href="http://leathercitypark.com" target="_blank" class="h4 otherproj">Leathercity Park</a>
-                    <p class="mb-5 mt-3">A Simple website that allows registration and viewing of past events pictures
-                      of
-                      the
-                      Girlcode Academy</p>
+                    <p class="mb-5 mt-3">Leather City Park is West Africa’s first leather industrial facility,
+                      representing a variety of industrial clusters and various stakeholders in the leather-footwear
+                      value chain.
+
+
+                    </p>
                     <div class="stack mt-5">
                       <span>HTML</span>
                       <span>CSS</span>
@@ -825,15 +828,17 @@
   <script src="assets/js/core/jquery.min.js" type="text/javascript"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/jquery-scrollTo/1.4.3/jquery.scrollTo.min.js"></script>
   <script src="assets/js/core/bootstrap.min.js" type="text/javascript"></script>
-  <script src="assets/js/now-ui-kit.js?v=1.2.0" type="text/javascript"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.2.0/anime.js"></script>
-
+  <!-- <script src="assets/js/now-ui-kit.js?v=1.2.0" type="text/javascript"></script> -->
+  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.2.0/anime.js"></script> -->
+  <script src="assets/js/plugins/animejs/anime.min.js"></script>
   <!-- Mouse Effect -->
   <script src="./assets/js/plugins/magneticmouse/paper-core.min.js"></script>
   <script src="./assets/js/plugins/magneticmouse/simplex-noise.min.js"></script>
   <script src="./assets/js/plugins/magneticmouse/magnetic-mouse.js"></script>
 
   <script src="./assets/js/custom.js"></script>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-V5G3Q07VPE"></script>
 </body>
 
 </html>
